--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,7 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="margin_text_cat">2dp</dimen>
+    <dimen name="events_detail_margin_header">2dp</dimen>
+    <dimen name="line_spacing_cat">2dp</dimen>
 </resources>
