--- a/app/src/main/res/layout/activity_sos.xml
+++ b/app/src/main/res/layout/activity_sos.xml
@@ -8,9 +8,10 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.HumanFirst.safe.app.SOSActivity">
 
-    <TextView
-        android:text="@string/hello_world"
+    <EditText
+        android:text="DANGER !!! DANGER"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:id="@+id/tvtest" />
 
 </RelativeLayout>
