--- a/app/src/main/res/menu/contacts_list.xml
+++ b/app/src/main/res/menu/contacts_list.xml
@@ -1,9 +1,18 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.HumanFirst.safe.app.ContactsList" >
+    xmlns:tools="http://schemas.android.com/tools" >
+
+
+    <item android:id="@+id/add_contacts"
+        android:title="@string/add_contacts"
+        android:orderInCategory="100"
+        app:showAsAction="ifRoom"
+        android:icon="@drawable/abc_ic_menu_share_holo_dark"
+        />
+
     <item android:id="@+id/action_settings"
         android:title="@string/action_settings"
         android:orderInCategory="100"
         app:showAsAction="never" />
+
 </menu>
