--- a/app/src/main/res/layout/fragment_scream.xml
+++ b/app/src/main/res/layout/fragment_scream.xml
@@ -9,11 +9,12 @@
     <ToggleButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="SCREAM"
+        android:textOn=""
+        android:textOff=""
         android:id="@+id/startApp"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="63dp" />
+        android:background="@drawable/check"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -26,12 +27,5 @@
         android:layout_marginLeft="30dp"
         />
 
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/imageView"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true"
-        android:src="@drawable/superman" />
 
 </RelativeLayout>
