--- a/app/src/main/res/menu/front_screen.xml
+++ b/app/src/main/res/menu/front_screen.xml
@@ -7,8 +7,9 @@
         android:title="@string/add_contacts"
         android:orderInCategory="100"
         app:showAsAction="ifRoom"
+        android:showAsAction="always"
         android:icon="@drawable/abc_ic_menu_share_holo_dark"
-        />
+        tools:ignore="AppCompatResource" />
 
     <item android:id="@+id/action_settings"
         android:title="@string/action_settings"
