--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,6 @@
      <color name="accent_1">#ff4d90fe</color>
      <color name="body_text_event_category_headers">#006094</color>
      <color name="header_text_events">#001285</color>
+
+     <color name="tab_color">#F1C40F</color>
 </resources>
