--- a/app/src/main/res/layout/single_list_contacts.xml
+++ b/app/src/main/res/layout/single_list_contacts.xml
@@ -25,7 +25,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:singleLine="true"
-            android:src="@drawable/del1" />
+            android:src="@drawable/del_button"
+            android:background="#00000000"
+            />
 
     </LinearLayout>
 
