--- a/app/src/main/res/layout/activity_sos.xml
+++ b/app/src/main/res/layout/activity_sos.xml
@@ -8,10 +8,12 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.HumanFirst.safe.app.SOSActivity">
 
-    <EditText
-        android:text="DANGER !!! DANGER"
+
+    <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/tvtest" />
-
+        android:id="@+id/imageView"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true"
+        android:src="@drawable/sosimage" />
 </RelativeLayout>
